--- a/app/templates/components/stream-feed/items/library-entry/activities.hbs
+++ b/app/templates/components/stream-feed/items/library-entry/activities.hbs
@@ -21,18 +21,23 @@
         {{! TODO: Possible to refactor into something less gross? }}
         {{#if (eq activity.verb "updated")}}
           {{t "feeds.library.updated" status=(t (concat "library.statuses." (model-type media) "." activity.status))}}
-        {{/if}}
-        {{#if (eq activity.verb "rated")}}
+        {{else if (eq activity.verb "rated")}}
           {{t "feeds.library.rated"}}
           {{star-rating activity.rating readOnly=true class="rating-container"}}
-        {{/if}}
-        {{#if (eq activity.verb "progressed")}}
+        {{else if (eq activity.verb "progressed")}}
           {{t (concat "feeds.library.progressed." (model-type media)) progress=activity.progress}}
-          <!-- TODO/FEED: Handle "unit" -->
-        {{/if}}
-        {{#if (eq activity.verb "reviewed")}}
-          <!-- TODO/FEED: Link when reviews exist -->
+        {{else if (eq activity.verb "reviewed")}}
           {{t "feeds.library.reviewed" link=(t "feeds.library.review")}}
+        {{/if}}
+
+        {{! Deletion }}
+        {{#if (is-self activity.actor)}}
+          &mdash;
+          {{#if deleteActivity.isRunning}}
+            deleting...
+          {{else}}
+            <a href="#" {{action "deleteActivity" activity}}>delete</a>
+          {{/if}}
         {{/if}}
       </span>
     </li>
