remove empty groups from feed after deletion

--- a/app/templates/components/stream-feed/items/library-entry.hbs
+++ b/app/templates/components/stream-feed/items/library-entry.hbs
@@ -25,6 +25,7 @@
             activityLimit=activityLimit
             feedId=feedId
             media=media
+            removeGroup=(action "removeGroup")
             class="aggregate-items"
             tagName="ul"
           }}
